--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@
         </article>
       </section>
     </main>
-    
+    <footer class="footer decorated-zone">
+      <h2 class="footer__title">focus</h2>
+    </footer>
   </body>
 </html>
